using ResponseEntity to return requests results